Kubernetes/sample_configs/ingress_external-dns_cert-manager/hello-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-kubernetes
  name: hello-kubernetes
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-kubernetes
