Kubernetes/sample_configs/ingress_external-dns_cert-manager/hello-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - hello-kubernetes.dcalvo.dev
    secretName: dcalvo-dev-tls
  rules:
  - host: hello-kubernetes.dcalvo.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes
            port:
              number: 80
